@@ -4253,6 +4253,20 @@ name|ChannelFuture
 name|future
 parameter_list|)
 block|{
+if|if
+condition|(
+name|future
+operator|.
+name|isSuccess
+argument_list|()
+condition|)
+block|{
+name|partition
+operator|.
+name|transferSuccessful
+argument_list|()
+expr_stmt|;
+block|}
 name|partition
 operator|.
 name|releaseExternalResources
